--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format:fix": "prettier --write ./src"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -26,7 +27,6 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
@@ -40,6 +40,8 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
+    "react-native-svg-transformer": "^1.0.0",
+    "reactotron-react-native": "^5.0.2",
     "typescript": "~4.3.5"
   },
   "private": true,
