--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint-warn": "eslint .",
     "lint-write": "eslint  --fix .",
     "format": "prettier --check ./src",
-    "format:fix": "prettier --write ./src"
+    "format:fix": "prettier --write ./src",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -21,6 +22,8 @@
     "apisauce": "^2.1.5",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^45.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -41,10 +44,17 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
     "react-native-svg-transformer": "^1.0.0",
+    "react-test-renderer": "17",
     "reactotron-react-native": "^5.0.2",
     "typescript": "~4.3.5"
   },
   "private": true,
   "author": "leavitdav01 <43161371+leavitdav01@users.noreply.github.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
+  }
 }
