--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+	"jsx": "react",
     "strict": true,
-    "module": "es2022",
+    "module": "es2020",
   }
 }
